--- a/deployment/docker/docker-compose.yml
+++ b/deployment/docker/docker-compose.yml
@@ -71,18 +71,18 @@ services:
     networks:
       - loki
 
-  gcs:
-    image: fsouza/fake-gcs-server
-    command: [ "-public-host=gcs -port=4443"]
-    ports:
-      - "4443:4443"
-    volumes:
-      # This creates an empty Loki Data bucket
-      - ./gcs-data/:/data/loki-data/
-      # This creates an empty Loki Ruler bucket
-      - ./gcs-data/:/data/loki-ruler/
-    networks:
-      - loki
+  #gcs:
+  #  image: fsouza/fake-gcs-server
+  #  command: [ "-public-host=gcs -port=4443"]
+  #  ports:
+  #    - "4443:4443"
+  #  volumes:
+  #    # This creates an empty Loki Data bucket
+  #    - ./gcs-data/:/data/loki-data/
+  #    # This creates an empty Loki Ruler bucket
+  #    - ./gcs-data/:/data/loki-ruler/
+  #  networks:
+  #    - loki
 
   minio:
     image: minio/minio
