--- a/deployment/docker/config/loki.yaml
+++ b/deployment/docker/config/loki.yaml
@@ -46,7 +46,7 @@ ingester:
   chunk_encoding: snappy
   chunk_target_size: 1.572864e+06
   chunk_block_size: 262144
-  flush_op_timeout: 10s
+  flush_op_timeout: 1m
 
 schema_config:
   configs:
