feat: configure loki logging driver

--- a/deployment/docker/docker-compose.yml
+++ b/deployment/docker/docker-compose.yml
@@ -104,6 +104,13 @@ services:
       - ./.data/minio:/data
     networks:
       - loki
+    logging:
+      driver: loki
+      options:
+        loki-url: 'http://loki-gateway:80/loki/api/v1/push'
+        loki-external-labels: job=minio
+        loki-timeout: 20s
+        loki-retries: 5
 
   loki-gateway:
     image: nginx:1.19
@@ -114,6 +121,13 @@ services:
       - "3100:3100"
     networks:
       - loki
+    logging:
+      driver: loki
+      options:
+        loki-url: 'http://loki-gateway:80/loki/api/v1/push'
+        loki-external-labels: source=loki-gateway
+        loki-timeout: 20s
+        loki-retries: 5
 
   loki-frontend:
     image: grafana/loki:2.5.0
@@ -132,6 +146,13 @@ services:
     deploy:
       mode: replicated
       replicas: 2
+    logging:
+      driver: loki
+      options:
+        loki-url: 'http://loki-gateway:80/loki/api/v1/push'
+        loki-external-labels: source=loki-read
+        loki-timeout: 20s
+        loki-retries: 5
 
   loki-read:
     image: grafana/loki:2.5.0
@@ -160,6 +181,13 @@ services:
       mode: replicated
       replicas: 3
     # only needed for interactive debugging with dlv
+    logging:
+      driver: loki
+      options:
+        loki-url: 'http://loki-gateway:80/loki/api/v1/push'
+        loki-external-labels: source=loki-read
+        loki-timeout: 20s
+        loki-retries: 5
 
   loki-write:
     image: grafana/loki:2.5.0
@@ -187,6 +215,13 @@ services:
     deploy:
       mode: replicated
       replicas: 3
+    logging:
+      driver: loki
+      options:
+        loki-url: 'http://loki-gateway:80/loki/api/v1/push'
+        loki-external-labels: source=loki-write
+        loki-timeout: 20s
+        loki-retries: 5
   
   tempo:
     image: grafana/tempo:latest
