--- a/deployment/docker/Makefile
+++ b/deployment/docker/Makefile
@@ -1,3 +1,7 @@
+install-plugin:
+	docker plugin install grafana/loki-docker-driver:latest --alias loki --grant-all-permissions
+
+all: install-plugin run view-logs 
 run:
 	docker-compose up -d
 
